add: implementação da IA deepl para tradução das sinopses, bem como criação da classe Series para tratar dessas informaçoes provindas da DTO. Refatoração da Main para criar um loop para o usúario pesquisar mais séries por vez sem encerrar o programa